--- a/Phase1/Project2/index.html
+++ b/Phase1/Project2/index.html
@@ -7,15 +7,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
-    <p>This is a mock website</p>
 </head>
 
 <body>
-
+    <h1>Legion</h1>
+    <div class="main">
+        <h2>Into:</h2>
+        <p>
+            The following is an excerpt from the TV Show <a href="https://www.imdb.com/title/tt5114356/">Legion.</a> The tale of a young man as he explores the thin line that separates reality and madness.
+        </p>
+        <h2>Part One: The Maze</h2>
+        <p>
+            There is a maze in the desert carved from sand and rock. A vast labyrinth of pathways and corridors a hundred miles long, a thousand miles wide, full of twists and dead ends. Picture it... a puzzle. You walk, and at the end of this maze is a prize just waiting to be discovered. All you have to do is find your way through. Can you see the maze? Its walls and floors, its twists and turns? Good, because the maze you've created in your mind is itself the maze. There is no desert, no rock or sand. There is only the idea of it. But it's an idea that will come to dominate your every waking and sleeping moment.<br/>
+            You're inside the maze now. You cannot escape.<br/>
+            Welcome to madness.
+        </p>
+        <h2>Part Two: Delusions</h2>
+        <p>
+            And now we must speak of Shuang Zhu, who fell asleep one day and dreamed he was a butterfly. For hours he fluttered in the warm winter sun, until he no longer remembered he was Shuang Zhu. Suddenly, he awoke and he was Shuang Zhu again, but in that moment he didn't know was he Shuang Zhu who dreamt he was a butterfly, or a butterfly who was dreaming he was Shuang Zhu. A delusion starts like any other idea, as an egg. Identical on the outside, perfectly formed, from the shell you wouldn't know anything was wrong. It's what's inside that matters.<br/>
+            <br/>
+            Albert A had an idea, one day as he was walking he stumbled, and for a moment it was as if his right leg didn't belong to him. This is how it begins. The leg was clearly Alberts, it was attached to his body and when he pricked it he felt pain, but despite that, the idea grew. Such is the power of an idea. With every day that passed, Albert became more and more certain that this was not his leg. He decided he didn't want it anymore, and so one day he went to the hardware store. You see, an idea alone isn't enough. We have ideas all the time, random thoughts and theories. Most die before they can grow. For a delusion to thrive, other more rational ideas must be rejected, destroyed. Only then, can a delusion blossom into full blown psychosis.
+        </p>
+        <h2>Part Three: Reality</h2>
+        <p>
+            A wise man once said, "Reality is that which, when you stop believing in it, doesn't go away." For the tick, reality is a product of temperature and butyric acid. Its perception of the world is its reality. The bloodhound has 200 million scent receptors. Its perception of the world is based fundamentally on smell. A dog doesn't reason. A tick never thinks about the universe in any way separate from its biological interactions with the universe. Human beings, on the other hand... Imagine a boy. From a young age, he is taught wrong. Human beings are the only animal that forms ideas about their world. We perceive it not through our bodies but through our minds. We must agree on what is real. Because of this, we are the only animal on Earth that goes mad.
+        </p>
+        <h2>Part Four: Contagion</h2>
+        <p>
+            You've heard of the placebo effect But are you aware of the nocebo effect? In which the human body has a negative physical reaction to a suggested harm. Your mind has the power to create its own physical reality. Why do we yawn when we see others yawn? Throughout history, there have been incidents. The Dancing Plague of 1518... the Tanganyika laughter epidemic... the Hindu milk miracle. Some believe they're a response to stress. Psychologists call it a conversion disorder. In that the body converts a mental stress... to a set of physical symptoms. In this case, a tic, or spasm. And, like any disorder, it can be contagious. This kind of collective behavior is not limited to human beings. What we know is that, in certain communities, under specific circumstances, an involuntary physical symptom developed by one person... can become viral. And spread, from person... To person... To person... Until the entire community is infected. And so, my question to you is, if the idea of illness can become illness, what else about our reality is actually a disorder?
+        </p>
+        <h2>Part Six: Conspiracy</h2>
+        <p>
+            Have you ever seen a shape in a cloud, or a face in a knot of wood? Every few months Jesus appears to the unsuspecting in a piece of toast. Or does he? Human beings are pattern seeking animals. For thousands of years, our survival depended on being able to spot patterns in nature to find predators hiding in the wild. And so now, centuries later, we are still looking, still searching every cloud for faces, as if our lives depend on it. So strong is our belief that a pattern must exist that the human mind will project the pieces that don't fit. So, where the pessimist sees danger hiding behind every back, the optimist sees friendship.<br/>
+            Which is why, when we encounter coincidence, we often see conspiracy.
+        </p>
+        <h2>Part Seven:Moral Panic</h2>
+        <p>
+            Moral panic is defined as "public anxiety or alarm in response to a perceived threat to the moral standards of society." The road to moral panic has several stops. The first is concern. This concern, limited at first, spreads from person to person... amplified by cultural forces... until rational concern becomes irrational fear. People come to believe something terrible is happening. Something they cannot see. That they can't control. It has come for others. It will come for them. Whether or not the threat is real, the response certainly is. And it is often excessive.<br/>
+            Ask yourself: What's more terrifying, fear, or the frightened?<br/>
+            <br/>
+            So what have we learned?That a delusion is an idea. That an idea can be contagious. That human beings are pattern-seeking animals. By which, I mean we prefer ideas that fit a pattern. In other words, we don't believe what we see. We see what we believe. And when we are stressed or our beliefs are challenged... when we feel threatened... the ideas we have can become irrational, one delusion leading to another, and another, as the human mind struggles to maintain its identity.<br/>
+            And when this occurs, what starts as an egg can become a monster.
+        </p>
+        <h2>Part Eight: The Cave</h2>
+        <p>
+            And now we come to the most alarming delusion of all. The idea that other people don't matter. Their feelings. Their needs. Imagine a cave where those inside never see the outside world. Instead, they see shadows of that world projected on the cave wall. The world they see in the shadows is not the real world. But it's real to them. If you were to show them the world as it actually is, they would reject it as incomprehensible. Now what if, instead of being in a cave, you were out in the world, except you couldn't see it. Because you weren't looking. Because you trusted that the world you saw through the prism was the real world. But there's a difference. You see, unlike the allegory of the cave, where the people are real and the shadows are false... here, other people are the shadows. Their faces. Their lives. This is the delusion of the narcissist, who believes that they alone are real. Their feelings are the only feelings that matter because other people are just shadows, and shadows don't feel. Because they're not real. But what if everyone lived in caves? Then no one would be real. Not even you. Unless one day you woke up and left the cave. How strange the world would look after a lifetime of staring at shadows.
+        </p>
+        <h2>Part Nine: Normal</h2>
+        <p>
+            In the end, what is the sound of truth? Waves on a beach, the laugh of a child. Or perhaps there are competing truths. The truth of the mind, the truth of the heart. If all the apples are bruised, then it is the unbruised apple that is bad, the sane man who's crazy. For what is normal is that upon which nine wise men can agree, leaving the tenth to swing from a hangman's rope.<br/>
+            <br/>
+            In the old days... Not so long ago... Madmen were packed onto boats and shipped off to sea. They were said to be searching for their lost sanity. They called these boats... the Ship of Fools. And for a long time, we thought we were the sane ones, left behind on dry land. But what if we're not? What if so much time has passed that we've forgotten the truth? That we are, in fact, the fools... afloat on an endless sea, pretending to be... normal.
+        </p>
+    </div>
 </body>
 
 <footer>
-
+    <a href="https://www.reddit.com/r/LegionFX/comments/8jx47h/narrations_and_chapter_titles/?utm_source=reddit-android">Source</a><a href="https://www.imdb.com/title/tt5114356/">Legion</a><a href="https://www.artbreeder.com">Background</a>
 </footer>
 
 </html>
