Added back links

--- a/Phase1/Project3/add.html
+++ b/Phase1/Project3/add.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="main">
-        <a href="index.html"></a>
+        <a href="index.html">Back</a>
         <form>
             <label for="client">Client:</label><br/>
             <input type="text" id="client"><br/>
