fixed printing of the table

--- a/Phase1/Project3/check.html
+++ b/Phase1/Project3/check.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Budget Planner</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
-    
+    <script src="scripts.js"></script>
 </head>
 
 <body>
     <div id="main">
         <a href="index.html">Back</a>
+        <script>printTable()</script>
     </div>
 </body>
-<script src="scripts.js"></script>
 </html>
