Finished implementation and debugging functionality

--- a/Phase1/Project3/add.html
+++ b/Phase1/Project3/add.html
@@ -21,7 +21,7 @@
             <label for="budget">Budget:</label><br/>
             <input type="number" id="budget"><br/>
             <button onClick="addProject()">Add</button>
-            <button >Clear</button>
+            <button type="reset">Clear</button>
         </form>
     </div>
 </body>
