--- a/Phase1/Project3/add.html
+++ b/Phase1/Project3/add.html
@@ -12,14 +12,15 @@
 
 <body>
     <div id="main">
-        <a href="index.html">Back</a>
+        <h1>Add New Budget</h1><br/>
         <form>
-            <label for="client">Client:</label><br/>
-            <input type="text" id="client"><br/>
-            <label for="name">Project Name:</label><br/>
-            <input type="text" id="name"><br/>
-            <label for="budget">Budget:</label><br/>
-            <input type="number" id="budget"><br/>
+            <label for="client">Client:</label>
+            <input type="text" id="client"><br/><br/>
+            <label for="name">Project Name:</label>
+            <input type="text" id="name"><br/><br/>
+            <label for="budget">Budget:</label>
+            <input type="number" id="budget"><br/><br/>
+            <a href="index.html">Back</a>
             <button onClick="addProject()">Add</button>
             <button type="reset">Clear</button>
         </form>
