--- a/Phase1/Project3/check.html
+++ b/Phase1/Project3/check.html
@@ -12,8 +12,9 @@
 
 <body>
     <div id="main">
-        <a href="index.html">Back</a>
+        <h1>Annual Budget</h1>
         <script>printTable()</script>
+        <a href="index.html">Back</a>
     </div>
 </body>
 </html>
