--- a/Phase1/Project3/index.html
+++ b/Phase1/Project3/index.html
@@ -13,8 +13,8 @@
 <body>
     <div id="main">
         <h1>Budget Planner</h1><br/><br/>
-        <a href="add.html">Add</a><br/><br/>
-        <a href="check.html" >Check</a><br/>
+        <a href="add.html">Program Managers</a><br/><br/>
+        <a href="check.html">Finance Teams</a><br/>
     </div>
 </body>
 <script src="scripts.js"></script>
