added About and Add Blog pages

--- a/Phase1/Project4/about.html
+++ b/Phase1/Project4/about.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="row bg-dark text-white">
+    <div class="row">
         <div class="col">
             <br/><br/><h1 class="text-center">My Blog</h1><br/><br/>
         </div>
@@ -19,8 +19,8 @@
     <div class="row bg-light">
         <div class="container-fluid position-sticky">
             <a class="col">Add Blog</a>
-            <a class="col" href="#">Home</a>
-            <a class="col">About Us</a>
+            <a class="col">Home</a>
+            <a class="col" href="#">About Us</a>
             <a class="col" href="mailto: jesse.imboden@tcs.com">Contact Us</a>
         </div>
     </div>
