--- a/Phase1/Project4/about.html
+++ b/Phase1/Project4/about.html
@@ -10,20 +10,43 @@
     
 </head>
 
-<body>
-    <div class="row">
+<body class="bg-info">
+    <div class="row bg-dark text-white">
         <div class="col">
-            <br/><br/><h1 class="text-center">My Blog</h1><br/><br/>
+            <br/><br/><h1 class="text-center">About Us</h1><br/><br/>
         </div>
     </div>
     <div class="row bg-light">
         <div class="container-fluid position-sticky">
-            <a class="col">Add Blog</a>
-            <a class="col">Home</a>
+            <a class="col" href="add.html">Add Blog</a>
+            <a class="col" href="index.html">Home</a>
             <a class="col" href="#">About Us</a>
             <a class="col" href="mailto: jesse.imboden@tcs.com">Contact Us</a>
         </div>
     </div>
-</body>
-<script src="scripts.js"></script>
+    <div>
+        <br/>
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-10 text-center bg-light border rounded">
+                <br/>
+                <h1>Created By:</h1>
+                <br/>
+            </div>
+            <div class="col-1"></div>
+            <div class="col-12"><br/></div>
+            <div class="col-1"></div>
+            <p class="col-10 bg-light border rounded">Jesse Imboden former United States Airman and full time coder.</p>
+            <div class="col-1"></div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row">
+            <div class="col-1"></div>
+            <p class="col-10 bg-light border rounded">Click on the Contact Me link to send me an email and let me know what you think about the site.</p>
+            <div class="col-1"></div>
+        </div>
+    </div>
+    </body>
 </html>
