made the nav links sticky

--- a/Phase1/Project4/about.html
+++ b/Phase1/Project4/about.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="row bg-light">
-        <div class="container-fluid position-sticky">
+        <div class="container-fluid sticky-top">
             <a class="col" href="add.html">Add Blog</a>
             <a class="col" href="index.html">Home</a>
             <a class="col" href="#">About Us</a>
