Altered look and feel

--- a/Phase1/Project4/add.html
+++ b/Phase1/Project4/add.html
@@ -10,7 +10,7 @@
     <script src="scripts.js"></script>
 </head>
 
-<body>
+<body class="bg-info">
     <div class="row bg-dark text-white">
         <div class="col">
             <br/><br/><h1 class="text-center">Add a New Blog</h1><br/><br/>
